test/fail/entitynulltype.app
// Type not defined 
authoredPapers

application test

section datamodel

  entity User {
    authoredPapers :: Null
  }
